--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,25 +6,13 @@ services:
     restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres 
-      POSTGRES_DB: testdb
-    container_name: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: gitmedb
+    container_name: postgres-gitme
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     ports:
       - '5432:5432'
-
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: nest-app
-    ports:
-      - '3000:3000'
-    depends_on:
-      - db
-    volumes:
-      - ./src:/app/src
 
   pgadmin:
     image: dpage/pgadmin4
@@ -37,3 +25,15 @@ services:
       - '5050:80'
     depends_on:
       - db
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: gitme-backend
+    ports:
+      - '3000:3000'
+    depends_on:
+      - db
+    volumes:
+      - ./src:/app/src
